<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rungreangchai.spaky.onebasic.UploadActivity">


    <ImageButton
        android:id="@+id/btn_select_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <EditText
        android:id="@+id/ed_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:hint="@string/pro_number"
        android:textColorHint="@color/text_pink" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:hint="@string/pro_name"
        android:textColorHint="@color/text_pink" />

    <EditText
        android:id="@+id/ed_price"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:hint="@string/pro_price"
        android:textColorHint="@color/text_pink" />

    <Button
        android:id="@+id/but_upload"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.3"
        android:background="@drawable/seletor_bg_button"
        android:text="@string/btn_upload"
        android:textColor="@color/text_white" />


</LinearLayout>
